--- a/src/app/content/single-view/single-view.component.html
+++ b/src/app/content/single-view/single-view.component.html
@@ -43,7 +43,7 @@
     </div>
 </div>
 <div class="category-background">
-    <app-new-movies></app-new-movies>
+    <app-category-new-movies></app-category-new-movies>
 </div>
 
 <app-footer></app-footer>
