--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -59,7 +59,7 @@
             <div class="profil-name">
                 <p><b>{{name}}</b></p>
             </div>
-            <button mat-menu-item>Meine Videos</button>
+            <button mat-menu-item>Meine Uploads</button>
             <button mat-menu-item (click)="openDialogProfil('0ms', '0ms')"> Profil bearbeiten</button>
             <button mat-menu-item (click)="openDialogKonto('0ms', '0ms')">Konto</button>
             <button mat-menu-item (click)="menuLogout()">Logout</button>
