--- a/src/app/storage/upload/upload.component.html
+++ b/src/app/storage/upload/upload.component.html
@@ -1,28 +1,29 @@
 <app-header></app-header>
-
+<div *ngIf="loadKey()"></div>
 <div class="content">
-    <form (ngSubmit)="submitUpload()">
+    <form [formGroup]="uploadForm" (submit)="onFormSubmit($event)">
         <h2>Upload</h2>
         <mat-form-field class="full-width">
             <mat-label>Film Name</mat-label>
-            <input matInput formControlName="movie_name" name="name" required>
+            <input matInput type="text" [formControl]="uploadForm.controls.movie_name">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Beschreibung Kurz</mat-label>
-            <input matInput formControlName="description_short" name="description_short" required>
+            <input matInput [formControl]="uploadForm.controls.description_short" name="description_short" required>
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Beschreibung lang</mat-label>
-            <textarea matInput formControlName="description" name="description"></textarea>
+            <textarea matInput [formControl]="uploadForm.controls.description" name="description"></textarea>
         </mat-form-field>
         <div class="date">
             <mat-form-field class="full-width">
                 <mat-label>Author</mat-label>
-                <input matInput formControlName="author" name="author" required>
+                <input matInput [formControl]="uploadForm.controls.author" name="author" required>
             </mat-form-field>
             <mat-form-field>
                 <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="date_from" name="date_from" required>
+                <input matInput [matDatepicker]="picker" [formControl]="uploadForm.controls.date_from" name="date_from"
+                    required>
                 <mat-hint>MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -35,14 +36,15 @@
                 <section class="section-option">
                     <mat-form-field class="full-width">
                         <mat-label>Video länge (min.)</mat-label>
-                        <input type="time" matInput formControlName="video_length" name="video_length" required>
+                        <input type="time" matInput [formControl]="uploadForm.controls.video_length"
+                            name="video_length">
                     </mat-form-field>
                 </section>
             </mat-card-content>
             <mat-card-content>
                 <h3 class="upload-h3">Film Typ</h3>
                 <section class="example-section">
-                    <mat-radio-group formControlName="movie_check" name="movie_check" required>
+                    <mat-radio-group [formControl]="uploadForm.controls.movie_check" name="movie_check" required>
                         <mat-radio-button value="movie">Spielfilm
                             / Kurzfilm
                         </mat-radio-button>
@@ -54,7 +56,7 @@
             <mat-card-content>
                 <h3 class="upload-h3">Genre</h3>
                 <section class="example-section">
-                    <mat-radio-group formControlName="genre" name="genre" required>
+                    <mat-radio-group [formControl]="uploadForm.controls.genre" name="genre" required>
                         <mat-radio-button value="nature">Natur
                         </mat-radio-button>
                         <mat-radio-button value="funny">Lustiges
@@ -68,68 +70,97 @@
             </mat-card-content>
             <mat-card-content>
                 <h3 class="upload-h3">Freigabe</h3>
-                <mat-chip-listbox aria-label="Fish selection" formControlName="selectedAge" name="selectedAge"
-                    value="0">
-                    <mat-chip-option value="0">Keine
-                        Altersfreigabe</mat-chip-option>
-                    <mat-chip-option value="6">Altersfreigabe
-                        ab 6</mat-chip-option>
+                <mat-chip-listbox aria-label="Fish selection" [formControl]="uploadForm.controls.selectedAge"
+                    name="selectedAge" value="uploadForm.controls.selectedAge">
+                    <mat-chip-option value="0">KeineAltersfreigabe</mat-chip-option>
+                    <mat-chip-option value="6">Altersfreigabeab 6</mat-chip-option>
                     <mat-chip-option value="12">Altersfreigabe ab 12</mat-chip-option>
                     <mat-chip-option value="16">Altersfreigabe ab 18</mat-chip-option>
                 </mat-chip-listbox>
-            </mat-card-content></mat-card>
-
-
+            </mat-card-content>
+        </mat-card>
         <mat-card class="result">
             <mat-card-content class="upload-button">
-                <h3 class="upload-h3">Video / Dateien</h3>
-                <div class="button_right">
-                    <input style="display: none;" type="file" class="file-input" accept="image/png, image/jpeg"
-                        (change)="onFileSelectedThumbnail($event)" #fileUpload>
-                    <div class="file-upload">
-                        <button mat-raised-button color="primary" class="upload-btn" (click)="fileUpload.click()">Cover
-                            <mat-icon>attach_file</mat-icon>
-                        </button>
-                        <p>{{fileName || "No file uploaded yet."}}</p>
-                    </div>
-                    <mat-icon class="cancel-upload" (click)="cancelUpload()"
-                        *ngIf="uploadProgress">delete_forever</mat-icon>
-                    <mat-icon id="check_thumbnail" style="color: green;" class="cancel-upload dn">done</mat-icon>
-                    <mat-icon id="nocheck_thumbnail" style="color: red;" class="cancel-upload dn">close</mat-icon>
+                <div class="info-datei">
+                    <h3 class="upload-h3">Video / Dateien</h3>
+                    <i *ngIf="!uploadForm.valid">(Bitte erst alle Felder oben ausfüllen)</i>
                 </div>
-                <div class="progress dn" id="thumbnail-progress">
-                    <mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgress"
-                        *ngIf="uploadProgress">
-                    </mat-progress-bar>
+                <div>
+                    <div class="button_right">
+                        <input style="display: none;" type="file" class="file-input" accept="image/png, image/jpeg"
+                            (change)="onFileSelectedThumbnail($event)" #fileUploadThumbnail>
+                        <div class="file-upload">
+                            <button [disabled]="!uploadForm.valid" mat-raised-button type="button" color="primary"
+                                class="upload-btn" (click)="fileUploadThumbnail.click()">Cover
+                                <mat-icon>attach_file</mat-icon>
+                            </button>
+                            <p>{{fileNameThumbnail || "No file uploaded yet."}}</p>
+                        </div>
+                        <mat-icon class="cancel-upload" (click)="cancelUploadThumbnail()"
+                            *ngIf="uploadProgressThumbnail">delete_forever</mat-icon>
+                        <mat-icon id="check_thumbnail" style="color: green;" class="cancel-upload dn">done</mat-icon>
+                        <mat-icon id="nocheck_thumbnail" style="color: red;" class="cancel-upload dn">close</mat-icon>
+                    </div>
+                    <div class="progress dn" id="thumbnail-progress">
+                        <mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgressThumbnail"
+                            *ngIf="uploadProgressThumbnail">
+                        </mat-progress-bar>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="button_right">
+                        <input style="display: none;" type="file" class="file-input" accept="image/png, image/jpeg"
+                            (change)="onFileSelectedImage($event)" #fileUploadImage>
+                        <div class="file-upload">
+                            <button [disabled]="!uploadForm.valid" mat-raised-button type="button" color="primary"
+                                class="upload-btn" (click)="fileUploadImage.click()">Image
+                                <mat-icon>attach_file</mat-icon>
+                            </button>
+                            <p>{{fileNameImage || "No file uploaded yet."}}</p>
+                        </div>
+                        <mat-icon class="cancel-upload" (click)="cancelUploadImage()"
+                            *ngIf="uploadProgressImage">delete_forever</mat-icon>
+                        <mat-icon id="check_image" style="color: green;" class="cancel-upload dn">done</mat-icon>
+                        <mat-icon id="nocheck_image" style="color: red;" class="cancel-upload dn">close</mat-icon>
+                    </div>
+                    <div class="progress dn" id="image-progress">
+                        <mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgressImage"
+                            *ngIf="uploadProgressImage">
+                        </mat-progress-bar>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="button_right">
+                        <input style="display: none;" type="file" class="file-input" accept="video/mp4"
+                            (change)="onFileSelectedVideo($event)" #fileUploadVideo>
+                        <div class="file-upload">
+                            <button [disabled]="!uploadForm.valid" mat-raised-button type="button" color="primary"
+                                class="upload-btn" (click)="fileUploadVideo.click()">Video
+                                <mat-icon>attach_file</mat-icon>
+                            </button>
+                            <p>{{fileNameVideo || "No file uploaded yet."}}</p>
+                        </div>
+                        <mat-icon class="cancel-upload" (click)="cancelUploadVideo()"
+                            *ngIf="uploadProgressVideo">delete_forever</mat-icon>
+                        <mat-icon id="check_video" style="color: green;" class="cancel-upload dn">done</mat-icon>
+                        <mat-icon id="nocheck_video" style="color: red;" class="cancel-upload dn">close</mat-icon>
+                    </div>
+                    <div class="progress dn" id="video-progress">
+                        <mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgressVideo"
+                            *ngIf="uploadProgressVideo">
+                        </mat-progress-bar>
+                    </div>
                 </div>
             </mat-card-content>
-
-
-
-
-
-
-
-
         </mat-card>
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="button-row">
-            <mat-slide-toggle formControlName="upload_visible_check" name="upload_visible_check" [checked]="false">
+            <mat-slide-toggle [formControl]="uploadForm.controls.upload_visible_check" name="upload_visible_check"
+                [checked]="false">
                 Upload für alle sichtbar?
             </mat-slide-toggle>
-            <button mat-fab extended color="primary">
+            <button mat-fab extended color="primary" type="submit">
                 <mat-icon>upload</mat-icon>
                 Veröffentlichen
             </button>
