--- a/src/app/content/movies/movies.component.html
+++ b/src/app/content/movies/movies.component.html
@@ -1,4 +1,5 @@
-<div class="wrapper"><app-header></app-header>
+<app-header></app-header>
+<div class="wrapper">
     <div class="content">
         <h1>Filme</h1>
         <div class="content-boxing ">
