--- a/src/app/content/series/series.component.scss
+++ b/src/app/content/series/series.component.scss
@@ -86,5 +86,5 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Mindesthöhe des Containers auf 100% der Bildschirmhöhe setzen */
+  min-height: calc(100vh - 72px);
 }
