--- a/src/app/content/watchlist/watchlist.component.html
+++ b/src/app/content/watchlist/watchlist.component.html
@@ -1,33 +1,11 @@
+<app-header></app-header>
 <div class="wrapper">
-    <app-header></app-header>
-
     <div class="content">
-        <h1>Weiterschauen</h1>
+        <h1>Meine Watchlist</h1>
         <div class="content-boxing ">
             <div class="content-draggable" id="content-box">
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
-                </div>
-                <div class="content-box">
-                    <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                <div *ngFor="let single of data" class="content-box">
+                    <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}" alt=""></a>
                 </div>
             </div>
         </div>
