--- a/src/app/module/my-uploads/my-uploads.component.scss
+++ b/src/app/module/my-uploads/my-uploads.component.scss
@@ -9,9 +9,8 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-top: 35px;
+  margin: 35px;
   max-width: 100%;
-  margin-bottom: 35px;
 }
 
 .mat-column-demo-position {
@@ -34,4 +33,11 @@
   width: 32px;
   text-align: center;
   font-weight: bold;
+}
+
+td {
+  img {
+    max-width: 50px;
+    border-radius: 5px;
+  }
 }
