--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -3,19 +3,49 @@
     <div class="content">
         <h2>Meine Uploads</h2>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <mat-text-column name="movie_name" headerText="Name"></mat-text-column>
 
-            <!-- Change the header text. -->
-            <mat-text-column name="cover" headerText="Cover"></mat-text-column>
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- Provide a data accessor for getting the cell text values. -->
-            <mat-text-column name="genre" headerText="Genre"></mat-text-column>
+            <!-- Position Column -->
+            <ng-container matColumnDef="movie_name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.movie_name}} </td>
+            </ng-container>
 
-            <!-- Provide a data accessor for getting the cell text values. -->
-            <mat-text-column name="created_at" headerText="Erstellt am"></mat-text-column>
+            <!-- Name Column -->
+            <ng-container matColumnDef="created_at">
+                <th mat-header-cell *matHeaderCellDef> Erstellt am </th>
+                <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
+            </ng-container>
 
-            <!-- Justify the content of the cells to the cell end. -->
-            <mat-text-column name="button" headerText="" justify="end"></mat-text-column>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="genre">
+                <th mat-header-cell *matHeaderCellDef> Genre </th>
+                <td mat-cell *matCellDef="let element"> {{element.genre}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="cover">
+                <th mat-header-cell *matHeaderCellDef> Cover </th>
+                <td mat-cell *matCellDef="let element"><a href="/single-view?select={{element.random_key}}"> <img
+                            [src]="element.cover" /></a> </td>
+            </ng-container>
+
+            <ng-container matColumnDef="change">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-raised-button color="accent" (click)="changeMovie(element.random_key)">Edit</button>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="delete">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-mini-fab color="primary" (click)="deleteMovie(element.random_key)"
+                        aria-label="Example icon button with a delete icon">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
