--- a/src/app/module/category/content-box.scss
+++ b/src/app/module/category/content-box.scss
@@ -32,12 +32,31 @@
   margin-right: 25px;
   display: flex;
   justify-content: start;
-  max-width: 250px;
-  min-width: 150px;
-  height: fit-content;
+  max-width: 200px;
+  min-width: 200px;
   border-radius: 10px;
   aspect-ratio: 16 / 9;
   box-shadow: 0px 6px 10px 5px #000000;
+
+  a {
+    text-decoration: none;
+    color: white;
+    z-index: 10;
+  }
+  p {
+    margin: 0;
+    padding: 10px;
+    position: relative;
+    bottom: 50px;
+    transform: rotate(-10deg);
+    pointer-events: none;
+    text-shadow: 1px 1px 1px black, 1px -1px 1px black, -1px 1px 1px black,
+      -1px -1px 1px black;
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 
   img {
     transition: all 0.2s ease-out;
@@ -45,6 +64,7 @@
     object-fit: cover;
     border-radius: 10px;
     height: -webkit-fill-available;
+    background-color: #333333;
 
     &:hover {
       border: 5px solid rgba(255, 255, 255, 0.5);
