--- a/src/app/content/movies/movies.component.html
+++ b/src/app/content/movies/movies.component.html
@@ -4,8 +4,16 @@
         <h1>Filme</h1>
         <div class="content-boxing ">
             <div class="content-draggable" id="content-box">
+
+                <div class="progress-div" *ngIf="loading"><mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                </div>
                 <div *ngFor="let single of data" class="content-box">
-                    <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}" alt=""></a>
+                    <div style="display: contents;" *ngIf="!loading">
+                        <a href="/single-view/?select={{single.random_key}}"><img src="{{single.cover}}"
+                                alt="{{single.movie_name}}">
+                            <p>{{single.movie_name}}</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
