--- a/src/app/module/category/category-header/category-header.component.scss
+++ b/src/app/module/category/category-header/category-header.component.scss
@@ -15,8 +15,7 @@
   align-items: center;
   padding: 10px;
 
-  max-width: 12%;
-  min-width: 120px;
+  width: 120px;
   border-radius: 25px;
   box-shadow: 0px 6px 15px 5px #000000;
   aspect-ratio: 16 / 9;
