--- a/src/app/module/my-uploads/dialog-delete.html
+++ b/src/app/module/my-uploads/dialog-delete.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Delete file</h2>
 <div mat-dialog-content>
-    Would you like to delete cat.jpeg?
+    Would you like to delete <i style="color: white;">{{movie_name}} </i> ?
 </div>
 <div mat-dialog-actions align="center">
-    <button mat-button mat-dialog-close>No</button>
-    <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+    <button mat-button mat-dialog-close>Abbruch</button>
+    <button mat-button mat-dialog-close cdkFocusInitial (click)="deleteMovie()">Löschen</button>
 </div>
