--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -40,7 +40,7 @@
             <ng-container matColumnDef="delete">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" (click)="deleteMovie(element.random_key)"
+                    <button mat-mini-fab color="primary" (click)="deleteMovie(element.random_key,element.movie_name)"
                         aria-label="Example icon button with a delete icon">
                         <mat-icon>delete</mat-icon>
                     </button>
