--- a/src/app/account/completely/completely.component.scss
+++ b/src/app/account/completely/completely.component.scss
@@ -1,7 +1,7 @@
 .completely-position {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Mindesthöhe des Containers auf 100% der Bildschirmhöhe setzen */
+  min-height: 100vh;
 }
 
 .completely {
