--- a/src/app/account/enter-passwort/enter-passwort.component.html
+++ b/src/app/account/enter-passwort/enter-passwort.component.html
@@ -5,7 +5,7 @@
                 <mat-card-subtitle>2. SCHRITT</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <h2>Passwort eingeben</h2>
+                <h2 translate>Passwort eingeben</h2>
                 <h3>Logge dich mit deiner E-Mail-Adresse in dein Konto ein: <i class="email-change">{{email}}</i> <span
                         (click)="changeMail()">(bearbeiten)</span>
                 </h3>
