--- a/src/app/templates/header/dialog/delete-account.html
+++ b/src/app/templates/header/dialog/delete-account.html
@@ -1,5 +1,6 @@
 <div class="delete-account">
-  <h2 mat-dialog-title>Account Löschen</h2>
+  <h2 mat-dialog-title translate>
+    Delete account</h2>
   <div mat-dialog-content>
     Bist du sicher das dein Account gelöscht werden soll??
   </div>
