--- a/src/app/templates/header/dialog/profil-account.html
+++ b/src/app/templates/header/dialog/profil-account.html
@@ -31,8 +31,8 @@
                 <mat-form-field>
                     <mat-label>Sprache</mat-label>
                     <mat-select [(value)]="selected_language">
-                        <mat-option value="Deutsch">Deutsch</mat-option>
-                        <mat-option value="Englisch">Englisch</mat-option>
+                        <mat-option value="de">Deutsch</mat-option>
+                        <mat-option value="en">Englisch</mat-option>
                     </mat-select>
                 </mat-form-field>
                 <h3 class="profil-h3">Freigabe</h3>
