--- a/src/app/content/movies/movies.component.html
+++ b/src/app/content/movies/movies.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="wrapper">
     <div class="content">
-        <h1>Filme</h1>
+        <h1 translate>Filme</h1>
         <div class="content-boxing ">
             <div class="content-draggable" id="content-box">
 
@@ -16,6 +16,7 @@
                     </div>
                 </div>
             </div>
+            <button (click)="translate.use('de')">233223</button>
         </div>
     </div>
 
