--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -18,6 +18,9 @@
       margin-left: 5px;
     }
   }
+  p {
+    margin: 0;
+  }
 }
 
 .logo {
@@ -69,6 +72,9 @@ a {
     background-color: #333333;
     &:hover {
       cursor: pointer;
+    }
+    p {
+      margin: 0;
     }
   }
   span {
